# fileInformation

./: .gitignore  CMakeLists.txt  README.md
FileXTest/: prova2.md  prova3.java  prova6.xls  prova7.txt
fileInformation/: .gitignore  CMakeLists.txt  README.md  main.c  pippo.docx
fileInformation/FileXTest/: pippo.docx  prova1.txt  prova4.c  prova5.docx
fileInformation/src/: config.c  main.c  opzioni.c  utility.c
src/: config.c  main.c  opzioni.c  utility.c
